<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_api_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/api_key"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/input_api_key"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/input_api_key" />

            <EditText
                android:id="@+id/input_api_key"
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lbl_api_key"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_api_key" />

            <TextView
                android:id="@+id/lbl_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/units"
                app:layout_constraintBottom_toBottomOf="@+id/radio_units"
                app:layout_constraintEnd_toStartOf="@+id/radio_units"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/radio_units" />

            <RadioGroup
                android:id="@+id/radio_units"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checkedButton="@id/button_celsius"
                app:layout_constraintEnd_toEndOf="@+id/input_api_key"
                app:layout_constraintStart_toStartOf="@+id/input_api_key"
                app:layout_constraintTop_toBottomOf="@+id/divider3">

                <RadioButton
                    android:id="@+id/button_celsius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="8dp"
                    android:text="@string/celsius" />

                <RadioButton
                    android:id="@+id/button_fahrenheit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="8dp"
                    android:text="@string/fahrenheit"
                    tools:layout_editor_absoluteY="32dp" />

                <RadioButton
                    android:id="@+id/button_kelvin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="8dp"
                    android:text="@string/kelvin"
                    tools:layout_editor_absoluteY="64dp" />
            </RadioGroup>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_units" />

            <TextView
                android:id="@+id/lbl_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/location"
                app:layout_constraintBottom_toBottomOf="@+id/input_country"
                app:layout_constraintEnd_toStartOf="@+id/input_state"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/input_city" />

            <EditText
                android:id="@+id/input_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/radio_units"
                app:layout_constraintStart_toStartOf="@+id/radio_units"
                app:layout_constraintTop_toBottomOf="@+id/divider4" />

            <EditText
                android:id="@+id/input_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/state"
                android:inputType="textCapCharacters"
                android:maxLength="2"
                app:layout_constraintEnd_toEndOf="@+id/input_city"
                app:layout_constraintStart_toStartOf="@+id/input_city"
                app:layout_constraintTop_toBottomOf="@+id/input_city" />

            <EditText
                android:id="@+id/input_country"
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/country"
                android:inputType="textCapCharacters"
                android:maxLength="2"
                app:layout_constraintEnd_toEndOf="@+id/input_state"
                app:layout_constraintStart_toStartOf="@+id/input_state"
                app:layout_constraintTop_toBottomOf="@+id/input_state" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_country" />

            <TextView
                android:id="@+id/lbl_delete_after"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/delete_after"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sp_delete_after"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider5" />

            <Spinner
                android:id="@+id/sp_delete_after"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/lbl_delete_after"
                app:layout_constraintEnd_toEndOf="@+id/input_country"
                app:layout_constraintStart_toStartOf="@+id/input_country"
                app:layout_constraintTop_toTopOf="@+id/lbl_delete_after" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="save"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>